Scalling fixes
- Changed scale in desktop mode to not be too big, while still easily legible.
- Fixed Art Stash button being on the left of the big green box again, instead of over.

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     font-size: 12px;
 }
 a {
-    font-size: 15px;
+    font-size: 13px;
     color: #b3a1fc;
     text-decoration:none;
 }
@@ -47,7 +47,7 @@ max-width: 77%;
 .dotted_green {
     background-color: rgb(45,39,34);
     background-color: rgba(172,190,133,0.5);
-    padding: 10px;
+    padding: 8px;
     content: "";
     clear: both;
     display: table;
@@ -72,8 +72,8 @@ max-width: 77%;
 .dotted_brown_solid {
     background-color: rgb(45,39,34);
     background-color: rgba(45,39,34,0.9);
-    padding: 20px;
-    padding-left: 50px;
+    padding: 10px;
+    padding-left: 40px;
     padding-right: 50px;
     content: "";
     clear: both;
@@ -87,7 +87,7 @@ max-width: 77%;
 .light_brown_solid {
     background-color: #4F453F;
     background-color: rgba(79,69,63,0.9);
-    padding: 3%;
+    padding: 2%;
     padding-left: 5%;
     padding-right: 5%;
     content: "";
@@ -126,7 +126,7 @@ color:#96928D;
 .link {
     float: left;
     color: white;
-    min-width: 190px;
+    min-width: 160px;
     padding: 3px;
     content: "";
     clear: both;
@@ -227,7 +227,7 @@ width:20%;
 
 #front_page_main {
 min-width: 100%;
-width: 800px;
+width: 850px;
 }
 
 .art_thumb_fav {
